# matrix-hyper-federation-client

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: client.rs  lib.rs  server_resolver.rs  well_known.rs
