[package]
name = "matrix-hyper-federation-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
doc-comment = "0.3.3"
ed25519-dalek = "1.0.1"
futures = "0.3.17"
futures-util = "0.3.17"
http = "0.2.5"
hyper = { version = "0.14.13", features = ["client", "http1", "server", "stream"] }
hyper-rustls = "0.24.0"
hyper-tls = "0.5.0"
log = "0.4.14"
native-tls = "0.2.8"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
signed-json = { git = "https://github.com/erikjohnston/rust-signed-json.git" }
tokio = { version = "1.12.0", features = ["macros"] }
tokio-native-tls = "0.3.0"
tokio-rustls = "0.24.0"
trust-dns-resolver = "0.20.3"
url = "2.3.1"
