[package]
name = "matrix-hyper-federation-client"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
doc-comment = "0.3.3"
ed25519-dalek = "2.0.0"
futures = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.25", features = ["client", "http1", "server", "stream"] }
hyper-rustls = "0.24.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
signed-json = { git = "https://github.com/erikjohnston/rust-signed-json.git" }
tokio = { version = "1.27.0", features = ["macros"] }
tokio-rustls = "0.24.0"
hickory-resolver = "0.24.2"
url = "2.5.4"
